unpackaged/main/default/objects/Qualifying_Donation__c/Qualifying_Donation__c.object-meta.xml
<CustomObject>
    <description>Opportunities that qualify and related to challenge matches</description>
    <label>Qualifying Opportunity</label>
    <nameField>
        <displayFormat>CMQD-{00000}</displayFormat>
        <label>Qualifying Opportunity Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualifying Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>