unpackaged/main/default/objects/Qualifying_Donation__c/fields/Annual_Challenge_Match__c.field-meta.xml
<CustomField>
    <fullName>Annual_Challenge_Match__c</fullName>
    <description>Created as a part of 2023 R4 enhancements (US-740).</description>
    <inlineHelpText>Master-Detail relationship to Deliverable</inlineHelpText>
    <label>Annual Challenge Match</label>
    <referenceTo>npsp__Grant_Deadline__c</referenceTo>
    <relationshipLabel>Qualifying Opportunitites</relationshipLabel>
    <relationshipName>Qualifying_Opportunitites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>