unpackaged/main/default/objects/Qualifying_Donation__c/fields/Annual_Match__c.field-meta.xml
<CustomField>
    <fullName>Annual_Match__c</fullName>
    <label>Annual Match</label>
    <referenceTo>Annual_Match__c</referenceTo>
    <relationshipLabel>Qualifying Donations</relationshipLabel>
    <relationshipName>Qualifying_Donations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>