unpackaged/main/default/objects/Qualifying_Donation__c/fields/Annual_Match_ID__c.field-meta.xml
<CustomField>
    <fullName>Annual_Match_ID__c</fullName>
    <formula>Annual_Match__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Match ID</label>
    <type>Text</type>
</CustomField>