unpackaged/main/default/objects/Qualifying_Donation__c/fields/Annual_Match_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Annual_Match_Lookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Annual Match</label>
    <referenceTo>Annual_Match__c</referenceTo>
    <relationshipLabel>Qualifying Opportunities (Annual Match)</relationshipLabel>
    <relationshipName>Qualifying_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>