unpackaged/main/default/objects/Qualifying_Donation__c/fields/Annual_Match_Originating_Donation__c.field-meta.xml
<CustomField>
    <fullName>Annual_Match_Originating_Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annual Match Originating Donation</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Qualifying Donations (Annual Match Originating Donation)</relationshipLabel>
    <relationshipName>Qualifying_Donations</relationshipName>
    <type>Lookup</type>
</CustomField>