unpackaged/main/default/objects/Qualifying_Donation__c/fields/Challenge_Fiscal_Year_Release__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Fiscal_Year_Release__c</fullName>
    <description>Fiscal Year qualifying amount is released.</description>
    <inlineHelpText>Fiscal Year qualifying amount is released.</inlineHelpText>
    <label>DEL_Challenge Fiscal Year Release</label>
    <length>4</length>
    <type>Text</type>
</CustomField>