unpackaged/main/default/objects/Qualifying_Donation__c/fields/Donation_Name__c.field-meta.xml
<CustomField>
    <fullName>Donation_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Donation Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Qualifying Matches</relationshipLabel>
    <relationshipName>Qualifying_Matches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>