unpackaged/main/default/objects/Qualifying_Donation__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>Donation_Name__r.Fiscal_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>