unpackaged/main/default/objects/Qualifying_Donation__c/fields/Pledge_Status__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Status__c</fullName>
    <formula>TEXT( Donation_Name__r.Pledge_Status__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pledge Status</label>
    <type>Text</type>
</CustomField>