unpackaged/main/default/objects/Qualifying_Donation__c/fields/Qualifying_Amount__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Amount__c</fullName>
    <description>the amount of the gift that's eligible to be matched (could be less than the total Opportunity Amount). Manually entered by the user</description>
    <label>Qualifying Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>