unpackaged/main/default/objects/Qualifying_Donation__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projected</fullName>
            </value>
            <value>
                <fullName>Solicited</fullName>
            </value>
            <value>
                <fullName>Verbally Committed</fullName>
            </value>
            <value>
                <fullName>Cancelled by EDF</fullName>
            </value>
            <value>
                <fullName>Declined by Donor</fullName>
            </value>
            <value>
                <fullName>Agreement in Negotiation</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Received as Unconditional Pledge</fullName>
            </value>
            <value>
                <fullName>Received as Conditional Pledge</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Returned Check</fullName>
            </value>
            <value>
                <fullName>Invalid Donation</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
                <isActive>false</isActive>
                <label>Closed Lost</label>
            </value>
            <value>
                <fullName>Closed Won</fullName>
                <isActive>false</isActive>
                <label>Closed Won</label>
            </value>
            <value>
                <fullName>Conditional</fullName>
                <isActive>false</isActive>
                <label>Conditional</label>
            </value>
            <value>
                <fullName>Declined Credit Card</fullName>
                <isActive>false</isActive>
                <label>Declined Credit Card</label>
            </value>
            <value>
                <fullName>Intention</fullName>
                <isActive>false</isActive>
                <label>Intention</label>
            </value>
            <value>
                <fullName>Pending Installment</fullName>
                <isActive>false</isActive>
                <label>Pending Installment</label>
            </value>
            <value>
                <fullName>Received as Pledge</fullName>
                <isActive>false</isActive>
                <label>Received as Pledge</label>
            </value>
            <value>
                <fullName>Refund - Chargeback</fullName>
                <isActive>false</isActive>
                <label>Refund - Chargeback</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>