unpackaged/main/default/objects/Qualifying_Donation__c/fields/Stage_Formula__c.field-meta.xml
<CustomField>
    <fullName>Stage_Formula__c</fullName>
    <description>Updated through Process Builder in LCRM</description>
    <formula>text(Donation_Name__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stage of the linked Donation Name</inlineHelpText>
    <label>Stage</label>
    <type>Text</type>
</CustomField>